# pocket-watch

./: .gitignore  BACKLOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  LICENSE  README.md  WAVE-2-4-SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pocket-watch-analysis.docx  pocket-watch-bank-sync-analysis.docx  pocket-watch-github-setup.docx  pocket-watch-plaid-action-plan.docx  vite.config.js  vitest.config.js  ~$cket-watch-analysis.docx  ~$cket-watch-github-setup.docx
.claude/agents/: color-token-checker.md  release-checker.md  security-reviewer.md
.github/workflows/: release.yml
docs/: audit-v0152.md
src/: App.css  App.jsx  constants.js  dataLayer.js  plaidLayer.js  seed.js  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: core.test.js  plaid-cursor-atomicity.test.jsx
src/components/: Accounts.jsx  AdjustmentForm.jsx  Budgets.jsx  Business.jsx  CSVImport.jsx  Calendar.jsx  CategoryIcon.jsx  CommandPalette.jsx  Dashboard.jsx  DatePicker.jsx  Equity.jsx  ErrorBoundary.jsx  Goals.jsx  Modal.jsx  MonthClose.jsx  MortgageCalculator.jsx  OnboardingWizard.jsx  PayStubImportModal.jsx  PlaidSync.jsx  QuickAddBar.jsx  RSUImportModal.jsx  Recurring.jsx  Reports.jsx  Settings.jsx  StatementImport.jsx  TransactionForm.jsx  Transactions.jsx  TransferForm.jsx  _BUDGETS_INTEGRATION_NOTES.txt  _EQUITY_INTEGRATION_NOTES.txt  _IMPORT_INTEGRATION_NOTES.txt  _ONBOARDING_INTEGRATION_NOTES.txt  _REPORTS_INTEGRATION_NOTES.txt  _SPRINT12_NOTES.txt  (+4 more)
(+9 files in other folders)
